tests/dataset/tpc-ds/compiler/cpp/q69.error
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:56:12: error: conversion from ‘vector<std::unordered_map<std::__cxx11::basic_string<char>, int>>’ to non-scalar type ‘vector<std::__cxx11::basic_string<char>>’ requested
   56 |       std::vector<decltype(std::unordered_map<std::string, decltype(34)>{
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   57 |           {std::string("amount"), 34}})>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   58 |           std::unordered_map<std::string, decltype(34)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   59 |               {std::string("amount"), 34}}};
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:61:12: error: conversion from ‘vector<std::unordered_map<std::__cxx11::basic_string<char>, int>>’ to non-scalar type ‘vector<std::__cxx11::basic_string<char>>’ requested
   61 |       std::vector<decltype(std::unordered_map<std::string, decltype(35)>{
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   62 |           {std::string("amount"), 35}})>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   63 |           std::unordered_map<std::string, decltype(35)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   64 |               {std::string("amount"), 35}}};
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:68:41: error: ‘w’ was not declared in this scope
   68 |                    std::vector<decltype(w.amount)> __items;
      |                                         ^
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:68:50: error: template argument 1 is invalid
   68 |                    std::vector<decltype(w.amount)> __items;
      |                                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:68:50: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:70:30: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   70 |                      __items.push_back(w.amount);
      |                              ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:70:42: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘amount’
   70 |                      __items.push_back(w.amount);
      |                                          ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp: In instantiation of ‘main()::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:67:20:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:66:45: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
   66 |                    return std::accumulate(v.begin(), v.end(), 0.0);
      |                                           ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:66:56: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
   66 |                    return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                      ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:77:41: error: ‘s’ was not declared in this scope
   77 |                    std::vector<decltype(s.amount)> __items;
      |                                         ^
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:77:50: error: template argument 1 is invalid
   77 |                    std::vector<decltype(s.amount)> __items;
      |                                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:77:50: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:79:30: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   79 |                      __items.push_back(s.amount);
      |                              ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:79:42: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘amount’
   79 |                      __items.push_back(s.amount);
      |                                          ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp: In instantiation of ‘main()::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:76:20:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:75:45: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
   75 |                    return std::accumulate(v.begin(), v.end(), 0.0);
      |                                           ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq692335818597/001/prog.cpp:75:56: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
   75 |                    return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                      ~~^~~
